Change the build config to Java 8 It is time to let Java 7 die The code base still is Java 7, changes to Java 8 will be done at a later point